config: add CORS for local development